--- a/glade/preferences_win.glade
+++ b/glade/preferences_win.glade
@@ -4918,7 +4918,7 @@ sensor</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
                         <property name="has_tooltip">True</property>
-                        <property name="tooltip" translatable="yes">Do not print debug messages</property>
+                        <property name="tooltip" translatable="yes">Do not write debug messages</property>
                         <property name="use_underline">True</property>
                         <property name="active">True</property>
                         <property name="draw_indicator">True</property>
